# PdatRiscvDsl

./: .gitignore  ASTRONVIM_SETUP.md  DATA_TYPE_CONSTRAINTS.md  LICENSE  README.md  package-lock.json  pyproject.toml
Motivation/: aesip_1.dsl  aesip_2.dsl  pdat.dsl  v2_rv32i_restricted_shifts.dsl
configs/: README.md  boom.yaml  ibex.yaml  riscvsinglecycle.yaml  rocket.yaml  schema.yaml
editors/: README.md
editors/vscode/: README.md  language-configuration.json  package.json  pdat-dsl.tmLanguage.json
examples/: allow_shifts_example.dsl  bitpattern_addi_powers_of_two.dsl  data_type_constraints.dsl  example_16reg.dsl  restrict_branch_alignment.dsl  restrict_shifts.dsl  restrict_single_shift.dsl  rv32ic.dsl  rv32im_64kb.dsl  rv32im_narrow16.dsl  rv32im_narrow8.dsl  rv32im_timing.dsl  rv32im_timing_strict.dsl  v2_allow_slli_shifts.dsl  v2_minimal_isa.dsl  v2_register_ranges.dsl  v2_rv32i_no_mul.dsl  v2_rv32i_restricted_shifts.dsl  v2_sequential_demo.dsl  v2_your_use_case.dsl
pdat_dsl/: __init__.py  __main__.py  aig_constraints.py  bdd_ops.py  codegen.py  codegen_v2_aig.py  config.py  dtype_codegen.py  encodings.py  find_signal_correspondences.py  hierarchical_synth.py  parser.py  random_constraints.py  rtl_patcher.py  smt_constraints.py  vcd_to_state_json.py
tree-sitter-pdat-dsl/: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter-pdat-dsl/bindings/node/: binding.cc  index.js
tree-sitter-pdat-dsl/bindings/rust/: lib.rs
tree-sitter-pdat-dsl/queries/: highlights.scm
tree-sitter-pdat-dsl/src/: grammar.json  node-types.json
tree-sitter-pdat-dsl/test/corpus/: basic.txt
workload/: rv32i.dsl  rv32i_no_add_addi.dsl  rv32im_no_XOR.dsl  rv32im_no_add.dsl  rv32im_no_add_addi.dsl  rv32im_no_add_sub.dsl  rv32im_no_bq.dsl  rv32im_no_div.dsl  rv32im_no_mul.dsl  rv32im_no_mul_no_div.dsl  rv32im_no_mul_no_div_no_rem.dsl  rv32im_no_sub.dsl  v2_rv32i_restricted_shifts.dsl
