[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdat-dsl"
version = "0.1.0"
description = "A Domain-Specific Language for specifying RISC-V ISA subsets"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "Nathan Bleier", email = "nbleier@umich.edu"}
]
keywords = ["risc-v", "isa", "dsl", "formal", "verification", "systemverilog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Hardware",
]

dependencies = [
    "pyyaml>=5.0",
    "jsonschema>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
]

[project.scripts]
pdat-dsl = "pdat_dsl.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/PdatDsl"
Documentation = "https://github.com/yourusername/PdatDsl/blob/main/README.md"
Repository = "https://github.com/yourusername/PdatDsl"
Issues = "https://github.com/yourusername/PdatDsl/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdat_dsl*"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
